--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,12 +21,12 @@
 		display: block;
 		width: 1140/1920 * 100%;
 		margin: 0 auto;
-		@media (max-width: 1200px ){
+		@media (max-width: 1440px ){
 			width: 1540/1920 * 100%;
 		}
 	}
 	
-		.header__nav {
+		.header__nav{
 			display: flex;
 			justify-content: space-between;
 			margin-bottom: 250px;
@@ -34,6 +34,9 @@
 			flex-direction: column;
 			justify-content: center;
 			margin-bottom: 100px;
+		}
+		@media (max-width: 1440px ){
+			margin-bottom: 150px;
 		}
 			.header__logo {
 				display: flex;
@@ -151,6 +154,9 @@
 }
 .about>div{
 	width: 22%;
+	@media (max-width: 1440px ){
+		width: 33%;
+		}
 	@media (max-width: 1200px ){
 		width: 95%;
 		}
@@ -185,6 +191,9 @@
 		display: block;
 		width: 1140/1920 * 100%;
 		margin: 0 auto;
+		@media (max-width: 1440px ){
+			width: 1540/1920 * 100%;
+		}
 		@media (max-width: 768px ){
 		width: 95%;
 		}
